--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
-click==8.0.3
+anyio==3.6.1
+asgiref==3.5.2
+atomicwrites==1.4.0
+attrs==21.4.0
+black==22.3.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
+click==8.1.3
 colorama==0.4.4
-Flask==1.1.2
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
+fastapi==0.78.0
+h11==0.13.0
+httptools==0.4.0
+idna==3.3
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
 peewee==3.15.0
-Werkzeug==2.0.2
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
+pydantic==1.9.1
+pyparsing==3.0.9
+pytest==7.1.2
+python-dotenv==0.20.0
+PyYAML==6.0
+requests==2.28.0
+requests-mock==1.9.3
+six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
+tomli==2.0.1
+typing-extensions==4.2.0
+urllib3==1.26.9
+uvicorn==0.17.6
+watchgod==0.8.2
+websockets==10.3
